--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -135,8 +135,8 @@
           </div>
           <div class="space-y-4">
             <div class="flex items-center gap-4 p-3 rounded-xl hover:bg-gray-50 transition-colors">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="team-logo" />
-              <span class="font-semibold text-gray-800 flex-1">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo" />
+              <span class="font-semibold text-gray-800 flex-1">Amigos FC</span>
               <div class="w-2 h-2 bg-blue-400 rounded-full"></div>
             </div>
             <div class="flex items-center gap-4 p-3 rounded-xl hover:bg-gray-50 transition-colors">
@@ -188,12 +188,12 @@
 
         <!-- MD2 -->
         <div class="fixture-card match-card rounded-xl shadow-md p-6"
-             data-match-id="MD2" data-matchday="2" data-home="Amingos FC" data-away="Strawhat Pirates">
+             data-match-id="MD2" data-matchday="2" data-home="Amigos FC" data-away="Strawhat Pirates">
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 2</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
             <div class="vs-text text-xl score-box">
               <span class="score-digit" data-role="home-score">0</span><span>-</span>
@@ -228,7 +228,7 @@
 
         <!-- MD4 -->
         <div class="fixture-card match-card rounded-xl shadow-md p-6"
-             data-match-id="MD4" data-matchday="4" data-home="Red Bulls Eleven" data-away="Amingos FC">
+             data-match-id="MD4" data-matchday="4" data-home="Red Bulls Eleven" data-away="Amigos FC">
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 4</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
@@ -240,8 +240,8 @@
               <span class="score-digit" data-role="away-score">0</span>
             </div>
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
 
         <!-- MD8 (reverse of MD2) -->
         <div class="fixture-card match-card rounded-xl shadow-md p-6"
-             data-match-id="MD8" data-matchday="8" data-home="Strawhat Pirates" data-away="Amingos FC">
+             data-match-id="MD8" data-matchday="8" data-home="Strawhat Pirates" data-away="Amigos FC">
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 8</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
@@ -320,8 +320,8 @@
               <span class="score-digit" data-role="away-score">0</span>
             </div>
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
           </div>
         </div>
@@ -348,12 +348,12 @@
 
         <!-- MD10 (reverse of MD4) -->
         <div class="fixture-card match-card rounded-xl shadow-md p-6"
-             data-match-id="MD10" data-matchday="10" data-home="Amingos FC" data-away="Red Bulls Eleven">
+             data-match-id="MD10" data-matchday="10" data-home="Amigos FC" data-away="Red Bulls Eleven">
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 10</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
             <div class="vs-text text-xl score-box">
               <span class="score-digit" data-role="home-score">0</span><span>-</span>
@@ -599,3 +599,4 @@
   </script>
 </body>
 </html>
+
