--- a/admin_fixture.html
+++ b/admin_fixture.html
@@ -104,8 +104,8 @@
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 2</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
             <span class="vs-text text-xl">VS</span>
             <div class="flex flex-col items-center">
@@ -141,8 +141,8 @@
             </div>
             <span class="vs-text text-xl">VS</span>
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
           </div>
           <div class="mt-4 text-center space-y-3 fixture-data"></div>
@@ -205,8 +205,8 @@
             </div>
             <span class="vs-text text-xl">VS</span>
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
           </div>
           <div class="mt-4 text-center space-y-3 fixture-data"></div>
@@ -232,8 +232,8 @@
           <div class="flex justify-center mb-4"><span class="matchday-badge">Matchday 10</span></div>
           <div class="flex items-center justify-center gap-6">
             <div class="flex flex-col items-center">
-              <img src="Amingos FC.jpg" alt="Amingos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
-              <span class="team-name">Amingos FC</span>
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="h-14 w-14 rounded-full shadow-md mb-3" />
+              <span class="team-name">Amigos FC</span>
             </div>
             <span class="vs-text text-xl">VS</span>
             <div class="flex flex-col items-center">
