--- a/team_list.html
+++ b/team_list.html
@@ -100,7 +100,7 @@
     { name: 'Messiah FC', image: 'Messiah FC.jpg' }, 
     { name: 'White Panthers', image: 'White Panthers.jpg' }, 
     { name: 'Strawhat Pirates', image: 'Strawhat Pirates.jpg' }, 
-    { name: 'Amingos FC', image: 'Amingos FC.jpg' }, 
+    { name: 'Amigos FC', image: 'Amigos FC.jpg' }, 
     ]; 
     
     const SALES = [ 
