--- a/independence_cup_2025.html
+++ b/independence_cup_2025.html
@@ -69,7 +69,7 @@
         <section class="bg-red-50 border-l-4 border-red-500 p-4 rounded">
           <h3 class="font-semibold mb-1 text-red-700">Important Notice</h3>
           <ul class="list-disc list-inside space-y-1">
-            <li>Organizers will not be liable for injuries, property loss, or incidents.</li>
+            <li>Organizers will not be liable for injuries, property loss, or death of any player.</li>
             <li>Teams must carry their own medical kits and individual water bottles.</li>
           </ul>
         </section>
