--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -158,7 +158,7 @@
     <section class="section-header rounded-2xl shadow-lg p-8">
       <div class="text-center mb-10">
         <h2 class="text-4xl font-bold text-gray-900 mb-2">
-          <span class="section-icon">📅</span>Tournament Fixtures
+          Tournament Fixtures
         </h2>
         <p class="text-gray-600 text-lg">Complete match schedule</p>
       </div>
@@ -420,58 +420,58 @@
 
       <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-6 max-w-6xl mx-auto">
         <!-- Semi Final 1 -->
-        <div class="knockout-card rounded-2xl shadow-md p-6">
+        <div class="final-card rounded-2xl shadow-lg p-6">
           <div class="text-center mb-6">
-            <h4 class="text-xl font-bold text-gray-800 mb-2">Semi Final 1</h4>
-            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-blue-400 to-transparent mx-auto"></div>
+            <h4 class="text-xl font-bold text-amber-800 mb-2">Semi Final 1</h4>
+            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-amber-500 to-transparent mx-auto"></div>
           </div>
           <div class="flex flex-col items-center gap-4">
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Winner Group A" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Winner Group A</span>
+              <img src="defaultlogo.jpg" alt="Winner Group A" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-amber-300" />
+              <span class="text-sm font-semibold text-amber-700">Winner Group A</span>
             </div>
-            <span class="vs-text text-lg">VS</span>
+            <span class="vs-text text-xl text-amber-600">VS</span>
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Runner-up Group B" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Runner-up Group B</span>
+              <img src="defaultlogo.jpg" alt="Runner-up Group B" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-amber-300" />
+              <span class="text-sm font-semibold text-amber-700">Runner-up Group B</span>
             </div>
           </div>
         </div>
-
+        
         <!-- Semi Final 2 -->
-        <div class="knockout-card rounded-2xl shadow-md p-6">
+        <div class="final-card rounded-2xl shadow-lg p-6">
           <div class="text-center mb-6">
-            <h4 class="text-xl font-bold text-gray-800 mb-2">Semi Final 2</h4>
-            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-blue-400 to-transparent mx-auto"></div>
+            <h4 class="text-xl font-bold text-amber-800 mb-2">Semi Final 2</h4>
+            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-amber-500 to-transparent mx-auto"></div>
           </div>
           <div class="flex flex-col items-center gap-4">
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Winner Group B" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Winner Group B</span>
+              <img src="defaultlogo.jpg" alt="Winner Group B" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-amber-300" />
+              <span class="text-sm font-semibold text-amber-700">Winner Group B</span>
             </div>
-            <span class="vs-text text-lg">VS</span>
+            <span class="vs-text text-xl text-amber-600">VS</span>
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Runner-up Group A" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Runner-up Group A</span>
+              <img src="defaultlogo.jpg" alt="Runner-up Group A" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-amber-300" />
+              <span class="text-sm font-semibold text-amber-700">Runner-up Group A</span>
             </div>
           </div>
         </div>
-
+        
         <!-- Third Place Match -->
-        <div class="knockout-card rounded-2xl shadow-md p-6">
+        <div class="final-card rounded-2xl shadow-lg p-6">
           <div class="text-center mb-6">
             <h4 class="text-xl font-bold text-gray-800 mb-2">Third Place</h4>
-            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-orange-400 to-transparent mx-auto"></div>
+            <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-gray-500 to-transparent mx-auto"></div>
           </div>
           <div class="flex flex-col items-center gap-4">
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Loser SF1" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Loser SF1</span>
+              <img src="defaultlogo.jpg" alt="Loser SF1" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-300" />
+              <span class="text-sm font-semibold text-gray-700">Loser SF1</span>
             </div>
-            <span class="vs-text text-lg">VS</span>
+            <span class="vs-text text-xl text-gray-600">VS</span>
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Loser SF2" class="h-16 w-16 rounded-full shadow-md mb-2" />
-              <span class="text-sm font-medium text-gray-600">Loser SF2</span>
+              <img src="defaultlogo.jpg" alt="Loser SF2" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-300" />
+              <span class="text-sm font-semibold text-gray-700">Loser SF2</span>
             </div>
           </div>
         </div>
