--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -458,23 +458,33 @@
         </div>
         
         <!-- Third Place Match -->
-        <div class="final-card rounded-2xl shadow-lg p-6">
+        <div class="final-card rounded-2xl shadow-lg p-6 bg-gradient-to-b from-gray-200 via-gray-300 to-gray-400">
           <div class="text-center mb-6">
+            <!-- Silver Crown Icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" 
+                 class="mx-auto mb-2 h-8 w-8 text-gray-600" 
+                 fill="currentColor" viewBox="0 0 24 24">
+              <path d="M5 20h14a1 1 0 001-1v-2.382l-3.447-5.17a1 1 0 00-1.606-.076L12 17l-2.947-5.628a1 1 0 00-1.606.076L4 16.618V19a1 1 0 001 1z" />
+              <path d="M4 9a2 2 0 114 0 2 2 0 01-4 0zm12 0a2 2 0 114 0 2 2 0 01-4 0zM10 6a2 2 0 114 0 2 2 0 01-4 0z" />
+            </svg>
             <h4 class="text-xl font-bold text-gray-800 mb-2">Third Place</h4>
             <div class="w-12 h-0.5 bg-gradient-to-r from-transparent via-gray-500 to-transparent mx-auto"></div>
           </div>
           <div class="flex flex-col items-center gap-4">
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Loser SF1" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-300" />
-              <span class="text-sm font-semibold text-gray-700">Loser SF1</span>
+              <img src="defaultlogo.jpg" alt="Loser SF1" 
+                   class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-400" />
+              <span class="text-sm font-semibold text-gray-800">Loser SF1</span>
             </div>
-            <span class="vs-text text-xl text-gray-600">VS</span>
+            <span class="vs-text text-xl text-gray-700">VS</span>
             <div class="flex flex-col items-center">
-              <img src="defaultlogo.jpg" alt="Loser SF2" class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-300" />
-              <span class="text-sm font-semibold text-gray-700">Loser SF2</span>
+              <img src="defaultlogo.jpg" alt="Loser SF2" 
+                   class="h-18 w-18 rounded-full shadow-lg mb-2 ring-2 ring-gray-400" />
+              <span class="text-sm font-semibold text-gray-800">Loser SF2</span>
             </div>
           </div>
         </div>
+
 
         <!-- Final -->
         <div class="final-card rounded-2xl shadow-lg p-6">
