--- a/scoreboard.html
+++ b/scoreboard.html
@@ -147,10 +147,9 @@
     let lastMatchData = null;
 
     // Prefill from URL (also used when creating a match)
-    let prefillMatchday = null;
-    let prefillFixture = null;   // token (doc id) if provided
-  // number or string
+    let prefillMatchday = null;  // number or string
     let prefillStage = null;     // string
+    let prefillFixture = null;   // token (doc id) if provided
 
     const els = {
       matchSelect: document.getElementById('matchSelect'),
